fix select box alignment

--- a/src/assets/sass/pandora/base/_form.scss
+++ b/src/assets/sass/pandora/base/_form.scss
@@ -99,6 +99,8 @@
       border: 1px solid $gray-light;
       color: $gray-light;
       height: 3rem;
+      padding-left: 0.5rem;
+      padding-right: 0.5rem;
     }
 
     select option {
